--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -1,120 +1,91 @@
 @charset "UTF-8";
+/* =====================
 
+			 footer CSS
+
+===================== */
 
 footer{
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
-
-.logotitle{
-	text-align: center;
-	margin-top: 10px;
+.footInfo{
+	text-align : center;
+}
+.footLogo{
+	width: 100px;
 }
 
-.logoimg{
-	width: 330px;
-	height: auto;
-}
+/* =====================
 
-.mainLogo{
-	width: 10%;
-	
-}
+			 nav CSS
 
-.lineCost{
-	margin-bottom: 0px;
-	margin-top: 0px;
-}
-
-.menuPart{
-	display: inline-block;
-	width: 49%;
-}
-
-.menuTree{
-	margin-left: -30px;
-}
-
-.menuTree ul{
-	list-style: none;
-	margin-bottom: 0px;
-}
-
-.menuTree li{
-	display: inline-block;
-	padding-right: 5px;
-	border-right: 1px solid rgba(0,0,0,.1);
-	font-color: gray;
-}
-
-.menuLogin{
-	text-align: right;
-}
-
-.menuLogin ul{
-	list-style: none;
-	margin-bottom: 0px;
-}
-
-.menuLogin li{
-	display: inline-block;
-	padding-right: 5px;
-}
-
-.menuTree a:link {
-	color: black; text-decoration: none;
-}
-.menuTree a:visited {
-	color: black; text-decoration: none;
-}
-.menuTree a:hover {
-	color: red; text-decoration: none;
-}
-
-
-.menuLogin a:link {
-	color: black; text-decoration: none;
-}
-.menuLogin a:visited {
-	color: black; text-decoration: none;
-}
-.menuLogin a:hover {
-	color: black; text-decoration: none;
-}
-
+===================== */
 
 .navTop{
 	padding: 0px;
 	margin: 0px;	
 }
-
 .navBottom{
 	margin: 10px;
 }
-
-.footInfo{
-	text-align : center;
-}
-
-.footLogo{
-	width: 100px;
-}
-
-.midw{
-	margin-top:30px;
-}
-
-.endw{
-	margin-top:15px;
-	font-size:13px;
-}
-
 .navHr{
 	margin-bottom: 3px;
 	width: 95%;
 }
+.navPart{
+	display: inline-block;
+	width: 49%;
+}
+.navTree{
+	margin-left: -30px;
+}
+.navTree ul{
+	list-style: none;
+	margin-bottom: 0px;
+}
+.navTree li{
+	display: inline-block;
+	padding-right: 5px;
+	border-right: 1px solid rgba(0,0,0,.1);
+	font-color: gray;
+}
+.navLogin{
+	text-align: right;
+}
+.navLogin ul{
+	list-style: none;
+	margin-bottom: 0px;
+}
+.navLogin li{
+	display: inline-block;
+	padding-right: 5px;
+}
+.navTree a:link {
+	color: black; text-decoration: none;
+}
+.navTree a:visited {
+	color: black; text-decoration: none;
+}
+.navTree a:hover {
+	color: red; text-decoration: none;
+}
+.navLogin a:link {
+	color: black; text-decoration: none;
+}
+.navLogin a:visited {
+	color: black; text-decoration: none;
+}
+.navLogin a:hover {
+	color: black; text-decoration: none;
+}
 
-/* Join CSS */
+/* =====================
+
+			 join CSS
+
+===================== */
+
 .joinBatang{
 	color: white;
 	background: black;
@@ -142,22 +113,53 @@ footer{
 	font-family: 'Nanum Gothic Coding', monospace;
 }
 
-.tdN1{
-	text-align: right;
-	width: 40%;
-}
-.tdN2{
-	text-align: left;
-	width: 60%;
-}
-
 .joinBtn{
 	margin-left: 15px;
 	margin-right: 15px;
 }
-/* */
 
-/* */
+/* =====================
+
+			 
+
+===================== */
+
+/* =====================
+
+			 
+
+===================== */
+
+.logotitle{
+	text-align: center;
+	margin-top: 10px;
+}
+
+.logoimg{
+	width: 330px;
+	height: auto;
+}
+
+.mainLogo{
+	width: 10%;
+	
+}
+
+.lineCost{
+	margin-bottom: 0px;
+	margin-top: 0px;
+}
+
+.midw{
+	margin-top:30px;
+}
+
+.endw{
+	margin-top:15px;
+	font-size:13px;
+}
+
+
 .loginBatang{
 		color: white;
 	background: black;
@@ -207,56 +209,6 @@ footer{
 	-webkit-text-stroke: 1px black;
 }
 
-.otInfoTxt{
-	font-family: 'Abril Fatface', cursive;
-}
-
-.otInfoTable{
-	width: 70%;
-	margin-left: 15%;
-	margin-right: 15%;
-	
-}
-
-.otInfoTable th{
-	height: 35px;
-	background: #f9f9f9;
-	color: black;
-	text-align: center;
-	border-top: 1px solid #c1c1c1;
-	border-bottom: 1px solid #c1c1c1;
-}
-
-.otInfoTable td{
-	text-align: center;
-	border-bottom: 1px solid #c1c1c1;
-
-}
-
-.noticeTxt{
-	font-family: 'Abril Fatface', cursive;
-}
-
-.noticeTable{
-	width: 70%;
-	margin-left: 15%;
-	margin-right: 15%;	
-}
-
-.noticeTable th{
-	height: 35px;
-	background: #f9f9f9;
-	color: black;
-	text-align: center;
-	border-top: 1px solid #c1c1c1;
-	border-bottom: 1px solid #c1c1c1;;
-}
-
-.noticeTable td{
-	text-align: center;
-	border-bottom: 1px solid #c1c1c1;
-}
-
 .thN1{
 	width: 10%
 }
@@ -272,9 +224,20 @@ footer{
 .thN5{
 	width: 10%
 }
+.tdN1{
+	text-align: right;
+	width: 40%;
+}
+.tdN2{
+	text-align: left;
+	width: 60%;
+}
 
+/* =====================
 
-/* instagram API */
+		instagram API 
+
+===================== */
 
  #instaPics {  
 	max-width: 90%;
@@ -322,6 +285,91 @@ footer{
 	width: 100%;
 	height: 100%;
 }
+
+/* =====================
+
+			otInfo CSS 
+
+===================== */
+
+.otInfoTitle{
+	font-family: 'Oswald', sans-serif;
+	margin-left: 15%;
+}
+
+.wirteBtn{
+	margin: 0px;
+}
+
+.otInfoTable{
+	width: 70%;
+	margin-left: 15%;
+	margin-right: 15%;
+	
+}
+
+.otInfoTable th{
+	height: 35px;
+	background: #f9f9f9;
+	color: black;
+	text-align: center;
+	border-top: 1px solid #c1c1c1;
+	border-bottom: 1px solid #c1c1c1;
+}
+
+.otInfoTable td{
+	text-align: center;
+	border-bottom: 1px solid #c1c1c1;
+
+}
+
+/* =====================
+
+			 notice CSS
+
+===================== */
+
+
+.noticeTxt{
+	font-family: 'Oswald', sans-serif;
+	margin-left: 15%;
+}
+.noticeTable{
+	width: 70%;
+	margin-left: 15%;
+	margin-right: 15%;	
+}
+.noticeTable th{
+	height: 35px;
+	background: #f9f9f9;
+	color: black;
+	text-align: center;
+	border-top: 1px solid #c1c1c1;
+	border-bottom: 1px solid #c1c1c1;;
+}
+.noticeTable td{
+	text-align: center;
+	border-bottom: 1px solid #c1c1c1;
+}
+
+/* =====================
+
+			 
+
+===================== */
+
+/* =====================
+
+			
+
+===================== */
+
+/* =====================
+
+			
+
+===================== */
+
 
 
 
