--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -322,6 +322,28 @@ footer{
 	border-bottom: 1px solid #c1c1c1;
 
 }
+.paging{
+	text-align: center;
+}
+.pagingBtn{
+    padding-left: 5px;
+    padding-right: 5px;
+    font-family: 'Anton', sans-serif;
+}
+.pagingHr{
+	margin-top: 0px;
+	width: 20%;
+	border-top-color: #c1c1c1;
+}
+.paging a:link {
+	color: black; text-decoration: none;
+}
+.paging a:visited {
+	color: black; text-decoration: none;
+}
+.paging a:hover {
+	color: black; text-decoration: none;
+}
 
 /* =====================
 
