--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -376,16 +376,72 @@ footer{
 
 /* =====================
 
-			 
+			 Shop CSS
 
 ===================== */
 
+
+.shopBatang{
+	margin-left: 5%;
+	margin-right: 5%;
+	height: 1500px;
+}
+.prodItem{
+	margin-top: 10px;
+	margin-left: 2%;
+	margin-right: 2%;
+	width: 350px;
+	height: 450px;
+	float: left;
+	
+}
+.prodImg{
+	margin: 1%;
+	width: 98%;
+	height: 85%;
+	background: black;
+}
+.prodInfo{
+	text-align: center;
+}
 /* =====================
 
-			
+			review CSS
 
 ===================== */
 
+
+.reviewSession{
+
+}
+
+.reviewBatang{
+	margin-left: 5%;
+	margin-right: 5%;
+	width:1200px;
+	height: 1500px;
+	
+}
+.reviewItem{
+	width: 300px;
+	height: 300px;
+	float: left;
+}
+.reviewText{
+	font-family: 'Do Hyeon', sans-serif;
+	width: 300px;
+    height: 300px;
+    background: #000000;
+    opacity: 0;
+}
+.reviewItem:hover .reviewText{
+	opacity: 0.7;
+    text-align: justify;
+    color: #ffffff;
+    font-size: 19px;
+    font-weight: 300;
+    padding: 120px 30px 100px 30px;
+}
 /* =====================
 
 			
